--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/angular-notifier/styles.scss",
               "src/styles.scss"
             ],
             "scripts": [
